Alterando layouts e mudando resposividades

--- a/Sites/Dashboard/dashboards.html
+++ b/Sites/Dashboard/dashboards.html
@@ -46,6 +46,7 @@
             <div class="line2"></div>
 
             <div class="contact-shapes">
+                <h3 class="contact-shapes__title">CONTATO</h3>
                 <ul class="contact-list">
                     <li class="contact-list__contact" class="link-contact">TELEFONE</li>
                     <li class="contact-list__contact" class="link-contact">EMAIL</li>
@@ -53,7 +54,7 @@
                 </ul>
             </div>
 
-            <a href="#" class="myButton"><i class="fas fa-sign-out-alt"></i> Sing Out</a>
+            <a href="#" class="menu__btn-sing-out"><i class="fas fa-sign-out-alt"></i> Sing Out</a>
         </header>
         <div class="page dashboard">
             <button onclick=" Menu()" class="menu__btn"><i class="fas fa-bars menu__btn-open"></i></button>
@@ -90,8 +91,8 @@
             </div>
             <div class="dashboard__heat-map">
                 <h3 class="dashboard__heat-map__title">Mapa de Calor</h3>
-                <canvas id="heatMap" class="dashboard__heat-map__print-heat" width="819px" height="500px"></canvas><img
-                    src="images/motherboard.png" class="dashboard__heat-map__motherboard" alt="">
+                <canvas id="heatMap" class="dashboard__heat-map__print-heat" width="819px" height="500px"></canvas>
+                <img src="images/motherboard.png" class="dashboard__heat-map__motherboard" alt="">
             </div>
         </div>
     </div>
