--- a/Sites/Dashboard/home.html
+++ b/Sites/Dashboard/home.html
@@ -42,6 +42,7 @@
         <div class="line2"></div>
 
         <div class="contact-shapes">
+            <h3 class="contact-shapes__title">CONTATO</h3>
             <ul class="contact-list">
                 <li class="contact-list__contact" class="link-contact">TELEFONE</li>
                 <li class="contact-list__contact" class="link-contact">EMAIL</li>
@@ -49,7 +50,7 @@
             </ul>
         </div>
 
-        <a href="#" class="myButton"><i class="fas fa-sign-out-alt"></i> Sing Out</a>
+        <a href="#" class="menu__btn-sing-out"><i class="fas fa-sign-out-alt"></i> Sing Out</a>
     </header>
 
 
