Correção de cores e posicionamento de elemntos

--- a/Sites/site_institucional/index.html
+++ b/Sites/site_institucional/index.html
@@ -20,15 +20,15 @@
             <ul>
                 <img class="logo" src="Logos/Logo-MIND6.png" alt="">
                 <li class="hover"><a href="index.html">Home</a></li>
-                <li class="hover"><a href="contato.html">Contato</a></li>
-                <li class="hover"><a href="controlTec.html">.ControlTec</a></li>
                 <li class="hover"><a href="sobre.html">Sobre nós</a></li>
+                <li class="hover"><a href="controlTec.html">.ControlTec</a></li>
+                <li class="hover"><a href="contato.html">Contato</a></li>
                 <li class="hover"><a href="../Dashboard/login.html">login</a></li>
             </ul>
         </div>
         <div class="laboratorio">
             <div class="cor">
-                <h1>A Inovadora empresa de Digital Solutions</h1>
+                <h1>MIND6 EVOLUINDO E CONSTRUINDO INOVAÇÕES DE PONTA</h1>
                 <a href="sobre.html"><button>Veja Mais</button></a>
             </div>
         </div>
