Estilização da página Sobre

--- a/Sites/site_institucional/index.html
+++ b/Sites/site_institucional/index.html
@@ -28,13 +28,13 @@
         </div>
         <div class="laboratorio">
             <div class="cor">
-                <h1>MIND6 EVOLUINDO E CONSTRUINDO INOVAÇÕES DE PONTA</h1>
+                <h1>MIND6 EVOLUINDO E CONSTRUINDO INOVAÇÕES DE PONTA A PONTA</h1>
                 <a href="sobre.html"><button>Veja Mais</button></a>
             </div>
         </div>
 
         <div class="content">
-            <h1 class="tituloMind6">Mind6 </h1>
+            <h1 class="tituloMind6">MIND6 </h1>
             <p class='subtitulo' align="center">A mais nova empresa de digital solutions, tem como seu primeiro produto
                 o
                 .ControlTec</p>
