--- a/Sites/site_institucional/sobre.html
+++ b/Sites/site_institucional/sobre.html
@@ -119,9 +119,9 @@
       </div>
     </div>
 
-    <div class="mvv">
+    <!-- <div class="mvv">
       <div class="missao">
-        <img src="img/missao.png" alt="">
+        <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_jsignqmt.json"  background="transparent"  speed="1"  style="width: 320px; height: 200px;"  loop  autoplay></lottie-player>
         <h3 class="titulo_mvv">Missão</h3>
         <p class="txt_mvv">Aperfeiçoar a gestão tecnológica e orçamentária de instituições.</p>
       </div>
@@ -138,7 +138,44 @@
         <h3 class="titulo_mvv">Valores</h3>
         <p class="txt_mvv">Precisão, Respeito, Ética, transparência, Paixão, inovação.</p>
       </div>
-    </div>
+    </div> -->
+
+    <section class="container-card">
+      <div class="card">
+        <lottie-player class="imgCard" src="https://assets1.lottiefiles.com/packages/lf20_kFAbrt.json"
+          background="transparent" speed="1" loop autoplay></lottie-player>
+        <div class="read">
+          <h1>MISSÃO</h1>
+          <p>
+            Aperfeiçoar a gestão tecnológica e orçamentária de instituições.
+          </p>
+        </div>
+      </div>
+
+      <div class="card">
+        <lottie-player class="imgCard" src="https://assets3.lottiefiles.com/private_files/lf30_VxFJnG.json"
+          background="transparent" speed="1" loop autoplay></lottie-player>
+        <div class="read">
+          <h1>VISÃO</h1>
+          <p>
+            Sermos capazes de atuar em qualquer ramo, levando nosso sistema para escolas, empresas, lojas e muito
+            mais. Oferecendo serviços de qualidade e confiabilidade, almejando o reconhecimento internacional.
+          </p>
+        </div>
+      </div>
+
+      <div class="card">
+        <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_JzIbhM.json" background="transparent"
+          speed="1" loop autoplay></lottie-player>
+        <div class="read">
+          <h1>VALORES</h1>
+          <p>
+            Precisão, Respeito, Ética, transparência, Paixão, inovação.
+          </p>
+        </div>
+      </div>
+    </section>
+
 
     <div class="footer">
       <div class="footer-content">
@@ -194,3 +231,4 @@
 </html>
 <script src="menu.js"></script>
 <script src="https://kit.fontawesome.com/26d639ee5e.js" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
