Atualização de nova prototipação para o dash

--- a/Sites/site_institucional/controlTec.html
+++ b/Sites/site_institucional/controlTec.html
@@ -33,13 +33,13 @@
 
         <div class="infoProject">
             <div class="project1">
-                <h1>Solução Digital</h1>
+                <h1>.CONTROLTEC, A MAIS NOVA SOLUÇÃO DIGITAL</h1>
             </div>
         </div>
 
         <div class="infoProject2">
             <div class="project2">
-                <h1>Conheça nosso Projeto</h1>
+                <h1>O QUE É A .CONTROLTEC</h1>
                 <p>
                     A MIND6 Digital Solutions é um time de profissionais que pode apoiar seus clientes a alcançarem
                     objetivos de negócios através da adoção de soluções digital.
