Eestilização e correção de elementos página .CONTROLTEC

--- a/Sites/site_institucional/controlTec.html
+++ b/Sites/site_institucional/controlTec.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <div class="infoProject2">
+        <!-- <div class="infoProject2">
             <div class="project2">
                 <h1>O QUE É A .CONTROLTEC</h1>
                 <p>
@@ -48,12 +48,75 @@
                     tomadas de decisões.
                 </p>
             </div>
-        </div>
+        </div> -->
 
 
+        <section id="controltec">
+            <h1>O QUE O É O .CONTROLTEC ?</h1>
+            <div class="cards">
+                <div class="card">
+                    <img src="Logos/Logo-DotControlTec.png" alt="">
+                </div>
+                <div class="card g-1">
+                    <p>
+                        A MIND6 Digital Solutions é um time de profissionais que pode apoiar seus clientes a alcançarem
+                        objetivos de negócios através da adoção de soluções digitais.
+                        Oferecemos a solução <b><i>.ControlTec</i></b> que veio para facilitar e modernizar as
+                        máquinas em
+                        âmbitos estudantis, com foco na utilização do técnico colaborando em suas
+                        tomadas de decisões.
+                    </p>
+                </div>
+            </div>
+        </section>
 
-        <div class="infoProject4" id="vantagens">
-            <h1 class="title">Vantagens do Projeto .ControlTec</h1>
+        <section id="controltecVantagens">
+            <h1>VANTAGENS DE UTILIZAR A .CONTROLTEC</h1>
+            <div class="cardsv">
+                <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_1t6khjj0.json"
+                    background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay>
+                </lottie-player>
+                <div class="cardv">
+                    <h2>A Compra COM preparação</h2>
+                    <p>
+                        Máquinas possuem componentes eletrônicos que necessitam de manunteção para seu uso de vida ser
+                        maior e melhor, porém, por muitas vezes é necessário fazer a troca desses componentes por
+                        danificação
+                        sem prévio aviso e em alguns momentos é necessario a troca de mais de um componente por apenas
+                        um danificado e sabemos o quão caro são. Com isso posto, a <b>.CONTROLTEC</b> alerta o técnico
+                        antes da danificação
+                        acontecer podendo se preparar para uma possível compra sem sustos e com preparação.
+                    </p>
+                </div>
+            </div>
+            <div class="cardsv">
+                <div class="cardvText">
+                    <h2>DashBorads em tempo real das máquinas</h2>
+                    <p>
+                        O técnico terá total acesso aos processos, máquinas e acessos por meio de dados inseridos em gráficos, apresentados todos em tempo real. Esses Dashs possuem avisos de critical, warning e inativo podendo também ser acessado por APP. A <b>.CONTROLTEC</b> veio com a possibilidade de usar nosso sistema onde for que você esteja sem perder nenhuma alteração de suas máquinas.
+                    </p>
+                </div>
+                <lottie-player class="time" src="https://assets7.lottiefiles.com/packages/lf20_2rzKDg.json"
+                    background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay>
+                </lottie-player>
+            </div>
+
+            <div class="cardsv">
+                <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_31ucdsl4.json"
+                    background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay>
+                </lottie-player>
+                <div class="cardv">
+                    <h2>Sistema 24/7 sem paradas</h2>
+                    <p>
+                        Enquanto suas máquinas estiverem ligadas, nosso sistema também estára atuando lá. Fazendo colhimento de dados e apresentando aos gráficos para o técnico e sendo enviados para o nosso banco de dados na nuvem. Nosso sistema fica em segundo plano não atrapalhando quem está usufruindo da máquina. 
+                    </p>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- <div class="infoProject4" id="vantagens">
+            <h1 class="title">PARA MAIS INFORMAÇÕES ENTRE EM CONTATO CONOSCO</h1>
             <div class="project4">
                 <div class="CardVant">
                     <li><i class="fas fa-sliders-h" aria-hidden="true"></i>
@@ -80,7 +143,7 @@
                     </li>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
         <div class="footer">
@@ -140,3 +203,4 @@
 </html>
 <script src="menu.js"></script>
 <script src="https://kit.fontawesome.com/26d639ee5e.js" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
