Troca de lottie-players na página sobre

--- a/Sites/site_institucional/controlTec.html
+++ b/Sites/site_institucional/controlTec.html
@@ -64,7 +64,7 @@
                         Oferecemos a solução <b><i>.ControlTec</i></b> que veio para facilitar e modernizar as
                         máquinas em
                         âmbitos estudantis, com foco na utilização do técnico colaborando em suas
-                        tomadas de decisões.
+                        tomadas de decisões. Evitando o gasto de tempo e dinheiro sem preparação prévia.
                     </p>
                 </div>
             </div>
