--- a/Sites/site_institucional/sobre.html
+++ b/Sites/site_institucional/sobre.html
@@ -142,8 +142,8 @@
 
     <section class="container-card">
       <div class="card">
-        <lottie-player class="imgCard" src="https://assets1.lottiefiles.com/packages/lf20_kFAbrt.json"
-          background="transparent" speed="1" loop autoplay></lottie-player>
+        <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_j12qmy7k.json" background="transparent"
+          speed="1" loop autoplay></lottie-player>
         <div class="read">
           <h1>MISSÃO</h1>
           <p>
@@ -153,8 +153,8 @@
       </div>
 
       <div class="card">
-        <lottie-player class="imgCard" src="https://assets3.lottiefiles.com/private_files/lf30_VxFJnG.json"
-          background="transparent" speed="1" loop autoplay></lottie-player>
+        <lottie-player src="https://assets6.lottiefiles.com/private_files/lf30_Ayp8HY.json" background="transparent"
+          speed="1" loop autoplay></lottie-player>
         <div class="read">
           <h1>VISÃO</h1>
           <p>
@@ -165,8 +165,8 @@
       </div>
 
       <div class="card">
-        <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_JzIbhM.json" background="transparent"
-          speed="1" loop autoplay></lottie-player>
+        <lottie-player src="https://assets3.lottiefiles.com/private_files/lf30_yPKMfX.json" background="transparent"
+          speed="0.8" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
         <div class="read">
           <h1>VALORES</h1>
           <p>
