--- a/Sites/site_institucional/contato.html
+++ b/Sites/site_institucional/contato.html
@@ -27,7 +27,7 @@
                 <li class="hover"><a href="../Dashboard/login.html">login</a></li>
             </ul>
         </div>
-        <div style="width: 100%; height: 100px; background-color: #232323;"></div>
+        <div style="width: 100%; height: 100px; background-color: #1B2431;"></div>
     </div>
 
     <div class="contato">
