--- a/Sites/site_institucional/controlTec.html
+++ b/Sites/site_institucional/controlTec.html
@@ -27,7 +27,6 @@
                     <li class="hover"><a href="../Dashboard/login.html">login</a></li>
                 </ul>
             </div>
-
         </div>
         </div>
 
@@ -93,7 +92,10 @@
                 <div class="cardvText">
                     <h2>DashBorads em tempo real das máquinas</h2>
                     <p>
-                        O técnico terá total acesso aos processos, máquinas e acessos por meio de dados inseridos em gráficos, apresentados todos em tempo real. Esses Dashs possuem avisos de critical, warning e inativo podendo também ser acessado por APP. A <b>.CONTROLTEC</b> veio com a possibilidade de usar nosso sistema onde for que você esteja sem perder nenhuma alteração de suas máquinas.
+                        O técnico terá total acesso aos processos, máquinas e acessos por meio de dados inseridos em
+                        gráficos, apresentados todos em tempo real. Esses Dashs possuem avisos de critical, warning e
+                        inativo podendo também ser acessado por APP. A <b>.CONTROLTEC</b> veio com a possibilidade de
+                        usar nosso sistema onde for que você esteja sem perder nenhuma alteração de suas máquinas.
                     </p>
                 </div>
                 <lottie-player class="time" src="https://assets7.lottiefiles.com/packages/lf20_2rzKDg.json"
@@ -108,7 +110,10 @@
                 <div class="cardv">
                     <h2>Sistema 24/7 sem paradas</h2>
                     <p>
-                        Enquanto suas máquinas estiverem ligadas, nosso sistema também estára atuando lá. Fazendo colhimento de dados e apresentando aos gráficos para o técnico e sendo enviados para o nosso banco de dados na nuvem. Nosso sistema fica em segundo plano não atrapalhando quem está usufruindo da máquina. 
+                        Enquanto suas máquinas estiverem ligadas, nosso sistema também estára atuando lá. Fazendo
+                        colhimento de dados e apresentando aos gráficos para o técnico e sendo enviados para o nosso
+                        banco de dados na nuvem. Nosso sistema fica em segundo plano não atrapalhando quem está
+                        usufruindo da máquina.
                     </p>
                 </div>
             </div>
