Edição de imagem para tela de contato

--- a/Sites/site_institucional/contato.html
+++ b/Sites/site_institucional/contato.html
@@ -28,9 +28,9 @@
             </div>
             <div class="laboratorio">
                 <div class="cor">
-                    <div class="read">
+                    <!-- <div class="read">
                         <h1>CONTATO MIND6</h1>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
