Linkando guias no header e dando inicio a pagina profile

--- a/Sites/Dashboard_new/Monitoramento/visaoGlobal.html
+++ b/Sites/Dashboard_new/Monitoramento/visaoGlobal.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <script src="../js/function.js"></script>
     <script src="https://kit.fontawesome.com/f87ccf6615.js" crossorigin="anonymous"></script>
-    <title>Aplicativos Instalados</title>
+    <title>Visão Global</title>
 </head>
 
 <body>
