--- a/Sites/Dashboard_new/profile.html
+++ b/Sites/Dashboard_new/profile.html
@@ -32,23 +32,10 @@
             <li><a href="">Blacklist</a></li>
             <li><a href="">Administrador</a></li>
         </ul>
-        <a href="#"><i onclick="abrirModal()" id="header__profile" class="fas fa-user-circle"></i></a>
+        <a href="profile.html"><i  id="header__profile" class="fas fa-user-circle"></i></a>
     </header>
 
-    <div id="modal" class="bg-modal">
-        <div id="profile__modal" class="modal">
-            <i id="modal__i-user" class="fas fa-user-circle"></i> <br>
-            <span id="modal__spn-nome">Lucas Felipe</span> <br> <br>
-            <span id="modal__spn-email">lucas.asantos@mind.com.br</span> <br> <br>
-            <a href="../profile.html"><button id="modal__btn-config">Configurar conta</button></a>
-            <div id="modal__div-linha"></div>
-            <button id="modal__btn-sair">Sair</button>
-        </div>
-
-        <div onclick="fecharModal()" class="fundo" style="width: 100%; height: 100%; ">
-
-        </div>
-    </div>
+   
 
     <div class="showcase">
         <div class="container">
