--- a/Sites/Dashboard_new/Monitoramento/visaoMaquina.html
+++ b/Sites/Dashboard_new/Monitoramento/visaoMaquina.html
@@ -91,16 +91,16 @@
                 
             </div>
 
-            <div style="display: flex; width: 100%;">
-                <div style="width: 100%; height: 150px;">
+            <div class="container-graficos-trabalhados" >
+                <div  style="width: 100%; height: 150px; margin-left: 10px;">
                     <span>Média de uso da CPU</span>
                 <div id="container-graficos__div-mediaCpu" class="container-graficos__div-configuracao">
 
                 </div>
                 </div>
                 
-                <div style="width: 100%; height: 150px;">
-                    <span>Nível de Temperatura ded CPU</span>
+                <div style="width: 100%; height: 150px; margin-right: 10px;">
+                    <span style="margin-left: 30px;">Nível de Temperatura de CPU</span>
                 <div id="container-graficos__div-tempCpu" class="container-graficos__div-configuracao">
 
                 </div>
