--- a/Sites/Dashboard_new/public/login.html
+++ b/Sites/Dashboard_new/public/login.html
@@ -16,7 +16,7 @@
 
         <div class="right__login">
             <img src="./img/Logo-DotControlTec.png" alt="">
-            <form onclick="return entrar()" id="form_login" method="post">
+            <form onsubmit="return entrar()" id="form_login" method="post">
                 <span id="right__span-titulo">Entre com sua conta</span> <br> <br>
                 <input placeholder="nome@example.com" type="email" id="login" name="login" class="right__input">
                 <br>
