--- a/Sites/Dashboard_new/public/profile.html
+++ b/Sites/Dashboard_new/public/profile.html
@@ -66,7 +66,7 @@
                     <span class="div-configuracao__spn" id="div-configuracao__spn-trocarSenha">Solicitar Troca de Senha</span>
                 </div>
 
-                <div id="div_configuracao__div-desconectar" class="div-configuracao__div">
+                <div onclick="finalizar_sessao('login.html')" id="div_configuracao__div-desconectar" class="div-configuracao__div">
                     <i class="fas fa-power-off"></i>
                     <span class="div-configuracao__spn" id="div-configuracao__spn-desconectar">Desconectar</span>
                 </div>
