--- a/Sites/Dashboard_new/public/Inventario/infoMaquina.html
+++ b/Sites/Dashboard_new/public/Inventario/infoMaquina.html
@@ -45,7 +45,7 @@
             <span id="modal__spn-email">lucas.asantos@mind.com.br</span> <br> <br>
             <a href="../profile.html"><button id="modal__btn-config">Configurar conta</button></a>
             <div id="modal__div-linha"></div>
-            <button id="modal__btn-sair">Sair</button>
+            <button onclick="finalizar_sessao('../login.html')" id="modal__btn-sair">Sair</button>
         </div>
 
         <div onclick="fecharModal()" class="fundo" style="width: 100%; height: 100%; ">
