--- a/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
+++ b/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
@@ -45,7 +45,7 @@
             <span id="modal__spn-email">lucas.asantos@mind.com.br</span> <br> <br>
             <a href="../profile.html"><button id="modal__btn-config">Configurar conta</button></a>
             <div id="modal__div-linha"></div>
-            <button id="modal__btn-sair">Sair</button>
+            <button onclick="finalizar_sessao('../login.html')" id="modal__btn-sair">Sair</button>
         </div>
 
         <div onclick="fecharModal()" class="fundo" style="width: 100%; height: 100%; ">
@@ -68,7 +68,7 @@
 
 
             <!-- Lista de computadores -->
-            <div class="container__div-lista">
+            <div class="container__div-lista" style="display: none;">
                 <table class="div-lista__table-listaMaquinas">
                     <thead class="table-listaMaquinas__thead-lista">
                         <th>Nome Computador</th>
@@ -91,7 +91,7 @@
 
 
             <!-- Gráficos -->
-            <div style="display: none;">
+            <div style="display: block;">
 
 
                 <div class="container-graficos">
