--- a/Sites/Dashboard_new/public/index.html
+++ b/Sites/Dashboard_new/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/header.css">
-    <script src="js/function.js"></script>
+   
     <script src="https://kit.fontawesome.com/f87ccf6615.js" crossorigin="anonymous"></script>
     <title>Visão Global</title>
 </head>
@@ -41,8 +41,8 @@
     <div id="modal" class="bg-modal">
         <div id="profile__modal" class="modal">
             <i id="modal__i-user" class="fas fa-user-circle"></i> <br>
-            <span id="modal__spn-nome">Lucas Felipe</span> <br> <br>
-            <span id="modal__spn-email">lucas.asantos@mind.com.br</span> <br> <br>
+            <span id="modal__spn-nome"></span> <br> <br>
+            <span id="modal__spn-email"></span> <br> <br>
             <a href="profile.html"><button id="modal__btn-config">Configurar conta</button></a>
             <div id="modal__div-linha"></div>
             <button onclick="finalizar_sessao('login.html')" id="modal__btn-sair">Sair</button>
@@ -64,3 +64,4 @@
 </body>
 
 </html>
+<script src="js/function.js"></script>
