--- a/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
+++ b/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../css/visaoMaquina.css">
     <link rel="stylesheet" href="../css/header.css">
     <script src="https://kit.fontawesome.com/f87ccf6615.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
     <title>Visão Máquina</title>
 </head>
 
@@ -67,7 +69,7 @@
 
 
             <!-- Lista de computadores -->
-            <div class="container__div-lista" style="display: none;">
+            <div id="container__div-idlista" class="container__div-lista" style="display: block;">
                 <table class="div-lista__table-listaMaquinas">
                     <thead class="table-listaMaquinas__thead-lista">
                         <th>Nome Computador</th>
@@ -78,19 +80,14 @@
                     <tbody id="reports">
                         <!-- MÁQUINAS SERÃO INSERIDAS AQUI -->
                         <!-- Exemplo de Insersão de Máquina -->
-                        <tr>
-                            <td>IPLOCAL302010</td>
-                            <td>Windows 10</td>
-                            <td>192.168.0.10</td>
-                            <td>On</td>
-                        </tr>
+
                     </tbody>
                 </table>
             </div>
 
 
             <!-- Gráficos -->
-            <div style="display: block;">
+            <div id="container__div-graficos" style="display: none;">
 
 
                 <div class="container-graficos">
@@ -103,7 +100,7 @@
                     </div>
 
                     <div id="container-graficos__div-usoCpu" class="container-graficos__div-configuracao">
-
+                        <canvas style="width: 300px; height: 300px;" id="foo"></canvas>
                     </div>
 
                     <div id="container-graficos__div-usoRam" class="container-graficos__div-configuracao">
@@ -143,3 +140,58 @@
 
 </html>
 <script src="../js/function.js"></script>
+<script src="https://bernii.github.io/gauge.js/dist/gauge.min.js"></script>
+<script src="../js/charts.js"></script>
+<script>
+    function addMachines() {
+        fetch(`/computador/recuperar/${sessionStorage.fkEscola}`, {
+            method: "GET"
+        }).then(response => {
+
+            if (response.ok) {
+
+                response.json().then(json => {
+                    let disponibilidade;
+                    for (let i = 0; i < json.length; i++) {
+                        if (json[i].disponibilidade) {
+                            disponibilidade = 'On'
+                        } else {
+                            disponibilidade = 'Off'
+                        }
+                        reports.innerHTML += `<tr onclick="selectMachine(${"machine" + i}, ${json.length})" id="machine${i}" data-idComputer="${json[i].idComputador}" >
+                            <td>${json[i].nomeComputador}</td>
+                            <td>${json[i].sistemaOperacional}</td>
+                            <td>${json[i].ipv4}</td>
+                            <td>${disponibilidade}</td>
+                        </tr>`
+                    }
+                });
+
+            } else {
+
+                console.log('Erro de login!');
+
+                response.text().then(texto => {
+                    console.error(texto);
+                });
+            }
+        });
+
+    }
+    addMachines();
+
+    function selectMachine(n, max) {
+        console.log(n);
+        console.log(n.dataset);
+        idMachineSelected = n.dataset.idcomputer;
+        sessionStorage.idComputador = idMachineSelected;
+        document.getElementById('container__div-graficos').style.display = 'block';
+        document.getElementById('container__div-idlista').style.display = 'none';
+       
+        percentColors = [[0.0, "#a9d70b"], [0.50, "#f9c802"], [1.0, "#ff0000"]];
+        receberNovasLeituras();
+
+    }
+
+
+</script>
